<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sharmadipanshu.aistudybuddy.fragments.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/studyRoomsFragment"
        android:name="com.sharmadipanshu.aistudybuddy.fragments.StudyRoomsFragment"
        android:label="@string/study_rooms" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.sharmadipanshu.aistudybuddy.fragments.CalendarFragment"
        android:label="@string/calendar" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.sharmadipanshu.aistudybuddy.fragments.ProfileFragment"
        android:label="@string/profile" />
</navigation>
